# rebasin

./: .pre-commit-config.yaml  LICENSE  README.md  plans.md  requirements-dev.txt  requirements.txt  results-out-of-date.md  ruff.toml  setup.cfg  setup.py
.github/workflows/: test.yml
benchmarks/: compute_time.py
rebasin/: __init__.py  _init_perms_weight_matching.py  _initializer.py  _paths.py  _wm_init_perms.py  composable_paths.py  interpolation.py  math.py  merge_many.py  model_info.py  modules.py  paths.py  permutation_coordinate_descent.py  permutation_initializer.py  permutations.py  structs.py  type_definitions.py  util.py  utils.py
rebasin/initialization/: _paths.py  _permutation.py  initializer.py
rebasin/perm/: init_perms.py  structs.py  update_perms.py
rebasin/weight_matching/: __init__.py  init_perms.py  permutation_coordinate_descent.py  structs.py
tests/: apply_to_real_models.py  benchmarks.py  conftest.py  draw_results.py  print_permutations.py  test_composable_paths.py  test_init_perms.py  test_interpolation.py  test_math.py  test_merge_many.py  test_model_paths.py  test_modules.py  test_new_paths.py  test_output_consistency.py  test_paths.py  test_pcd_initialization.py  test_permutation_coordinate_descent.py  test_permutation_initializer.py  test_placeholder.py  test_update_perms.py  test_util.py  test_utils.py
tests/data/: howto.txt
tests/fixtures/: dataloaders.py  datasets.py  mandw.py  models.py  paths.py  test_interpolation.py  training.py  util.py  utils.py
tests/results/: efficientnet_b1.csv  info.txt  mobilenet_v3_large.csv  (+8 more)
(+17 files in other folders)
