[metadata]
name = rebasin
version = 0.0.38
description = An implementation of methods described in Git Re-basin-paper by Ainsworth et al.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snimu/rebasin
author = Sebastian Müller @snimu
author_email = sebastian.nicolas.mueller@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = torch git-rebasin rebasin interpolate interpolation model deep-learning

[options]
packages = rebasin
python_requires = >=3.8
include_package_data = True

[options.package_data]
torchinfo = py.typed

[mypy]
strict = True
implicit_reexport = True
enable_error_code = ignore-without-code
exclude = build/*
